Loading IPFS readme works.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
 
     </div>
 
+    <!-- ipfs -->
+    <script src="https://unpkg.com/ipfs/dist/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ipfs/dist/index.js"></script>
+
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="js/windows-forms.js"></script>
+
+    <!-- Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <!-- Custom scripts -->
+    <script src="js/windows-forms.js"></script>
     <script src="js/ipfs-notepad.js"></script>
 
 </body>
