Forgot openFile implementation.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <li id="help-menu-title" data-enabled="false" data-active="false" data-dropdown-id="help-menu" class="windows-menu-title">Help</li>
         </ul>
 
-        <textarea id="ipfs-notepad-textarea" v-model="file" class="" wrap="off" readonly="true"></textarea>
+        <textarea id="ipfs-notepad-textarea" v-model="file" class="" wrap="off" readonly="true">
+Loading, please wait... 
+If nothing comes up after 1 minute, consider checking if your browser is compatible.
+        </textarea>
 
         <div id="ipfs-notepad-statusbar-container" class=""></div>
 
